Fixing the issue where the new bar chart view height was too high for desktop devices.

--- a/frontend/themes/froniusvizualizer/styles.css
+++ b/frontend/themes/froniusvizualizer/styles.css
@@ -21,6 +21,7 @@ body {
 html {
     --fullscreen-height: calc(100vh - 3.5rem);
     --fullscreen-height-column: calc(100vh - 7.5rem);
+    --fullscreen-height-timo-column: calc(100vh - 17rem);
 }
 
 :focus-visible {
@@ -32,6 +33,7 @@ html {
     html {
         --fullscreen-height: calc(100vh - 10.5rem);
         --fullscreen-height-column: calc(100vh - 14.5rem);
+        --fullscreen-height-timo-column: calc(100vh - 24.5rem);
     }
 }
 
